# scp

./: .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  build_output.txt  doc_warnings.txt  docker-compose.yml  full_test_output.txt  hub_stdout.txt  plan.md  run_hub.ps1  test_admin_api.ps1  test_connectivity.ps1  test_hub_start.ps1  test_output.txt
.github/workflows/: ci.yml  docker.yml  release.yml
config/: scp-example.toml
crates/scp-cli/: Cargo.toml
crates/scp-cli/src/: main.rs
crates/scp-core/: Cargo.toml
crates/scp-core/src/: config.rs  error.rs  id_map.rs  keyword_accumulator.rs  lib.rs  mcp_types.rs  protocol.rs
crates/scp-filter/: Cargo.toml
crates/scp-filter/benches/: pipeline_bench.rs
crates/scp-filter/src/: budget.rs  chunker.rs  content_type.rs  dedup.rs  delivery_logger.rs  embedding_scorer.rs  field_stripper.rs  lib.rs  pipeline.rs  progressive.rs  relevance.rs  token_count.rs
crates/scp-hub/: Cargo.toml
crates/scp-hub/src/: admin.rs  extension_tools.rs  hub.rs  lib.rs  listener.rs  main.rs  metrics.rs  reload.rs  router.rs  server_manager.rs  session_store.rs  streaming.rs  tool_cache.rs  tracing_setup.rs
crates/scp-index/: Cargo.toml
crates/scp-index/src/: embedding_cache.rs  embedding_client.rs  embedding_scorer.rs  lib.rs  registry.rs  scorer.rs  tags.rs  tfidf.rs  usage.rs
crates/scp-pool/: Cargo.toml
crates/scp-pool/src/: circuit_breaker.rs  dedicated.rs  lib.rs  lifecycle.rs  manager.rs  metrics.rs  pooled.rs  shared.rs
crates/scp-transport/: Cargo.toml
crates/scp-transport/src/: error.rs  http_client.rs  http_server.rs  lib.rs  stdio_client.rs  stdio_server.rs
harness/: README.md  Run-Tests.ps1  scp-test-resolved.toml  scp-test.toml
mcp/n8n-server/: package-lock.json  package.json
mcp/ssh-server/: package-lock.json  package.json
memory/: embeddings.npy  id_map.json  memories.db  memories.db-shm  memories.db-wal
tasks/: embeddings.npy  id_map.json  phase0-tasks.md  phase1-tasks.md  phase2-tasks.md  tasks.db  tasks.db-shm  tasks.db-wal
tests/: Cargo.toml
tests/src/: common.rs  lib.rs
tests/tests/: admin_api_test.rs  auth_test.rs  circuit_breaker_test.rs  e2e_binary_test.rs  e2e_test.rs  embedding_test.rs  error_handling_test.rs  filter_e2e_test.rs  filter_pipeline_test.rs  multi_client_test.rs  passthrough.rs  phase1.rs  sse_integration_test.rs  stdio_integration_test.rs  tool_index_test.rs
