[workspace]
resolver = "2"
members = [
    "crates/scp-core",
    "crates/scp-transport",
    "crates/scp-pool",
    "crates/scp-index",
    "crates/scp-filter",
    "crates/scp-hub",
    "crates/scp-cli",
    "tests",
]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
tokio-test = "0.4"
toml = "0.8"
regex = "1.10"
axum = { version = "0.7", features = ["tokio", "json"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
urlencoding = "2.1"
sha2 = "0.10"
log = "0.4"
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1"
url = "2"
criterion = "0.5"
tempfile = "3"
