[package]
name = "scp-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.8"
uuid = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
scp-core = { path = "../crates/scp-core" }
scp-transport = { path = "../crates/scp-transport" }
scp-pool = { path = "../crates/scp-pool" }
scp-index = { path = "../crates/scp-index" }
scp-filter = { path = "../crates/scp-filter" }
scp-hub = { path = "../crates/scp-hub" }

[[bin]]
name = "mock-mcp-server"
path = "src/bin/mock_server.rs"

[[test]]
name = "passthrough"
path = "tests/passthrough.rs"
