[package]
name = "scp-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tempfile = "3.8"
uuid = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
scp-core = { path = "../crates/scp-core" }
scp-transport = { path = "../crates/scp-transport" }
scp-pool = { path = "../crates/scp-pool" }
scp-index = { path = "../crates/scp-index" }
scp-filter = { path = "../crates/scp-filter" }
scp-hub = { path = "../crates/scp-hub" }

[[bin]]
name = "mock-mcp-server"
path = "src/bin/mock_server.rs"

[[test]]
name = "passthrough"
path = "tests/passthrough.rs"

[[test]]
name = "circuit_breaker_test"
path = "tests/circuit_breaker_test.rs"

[[test]]
name = "auth_test"
path = "tests/auth_test.rs"

[[test]]
name = "admin_api_test"
path = "tests/admin_api_test.rs"

[[test]]
name = "error_handling_test"
path = "tests/error_handling_test.rs"

[[test]]
name = "e2e_binary_test"
path = "tests/e2e_binary_test.rs"

[[test]]
name = "sse_integration_test"
path = "tests/sse_integration_test.rs"
