[package]
name = "scp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"
