[package]
name = "scp-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
scp-core = { path = "../scp-core" }
scp-index = { path = "../scp-index" }
sha2 = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
