[package]
name = "scp-hub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scp-hub"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
scp-core = { path = "../scp-core" }
scp-transport = { path = "../scp-transport" }

[dev-dependencies]
tokio-test = { workspace = true }
