[package]
name = "scp-hub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scp-hub"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
scp-core = { path = "../scp-core" }
scp-transport = { path = "../scp-transport" }
scp-pool = { path = "../scp-pool" }
scp-index = { path = "../scp-index" }
scp-filter = { path = "../scp-filter" }

[dev-dependencies]
tokio-test = { workspace = true }
tower = { workspace = true }
