[package]
name = "scp-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
scp-core = { path = "../scp-core" }
scp-transport = { path = "../scp-transport" }
