[package]
name = "scp-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
scp-core = { path = "../scp-core" }

[dev-dependencies]
tokio-test = { workspace = true }
